<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/show_map_item"
        android:icon="@drawable/ic_action_map"
        android:orderInCategory="100"
        android:title="@string/show_map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/my_places_list_item"
        android:icon="@drawable/ic_action_view_as_list"
        android:orderInCategory="100"
        android:title="@string/my_places_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_item"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="ifRoom" />
</menu>